# snakes-1.0

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  MERGE_PLAN.md  README.md  ROBOT.md  pyproject.toml
.claude/commands/: archive-day.md
apps/: __init__.py
apps/diagnosis/: README.md  __init__.py  cli.py
apps/hackathon/: __init__.py  escape_room.py  x2_mock.py
docs/: EVENTLOG_SCHEMA.md  PRD_SNAKES_2_0.md  RESEARCH_JOURNAL.md  ROBOT_MD_SPEC.md  RUN_REPORT_2026-04-19.md
docs/design/: NOTES_SNAKES_2_0.md
docs/dev/: DEVLOG_2026-04-20.md  DEVLOG_2026-04-20_10.md  DEVLOG_2026-04-20_11.md  DEVLOG_2026-04-20_2.md  DEVLOG_2026-04-20_3.md  DEVLOG_2026-04-20_4.md  DEVLOG_2026-04-20_5.md  DEVLOG_2026-04-20_6.md  DEVLOG_2026-04-20_7.md  DEVLOG_2026-04-20_8.md  DEVLOG_2026-04-20_9.md  DEVLOG_2026-04-21_1.md  DEVLOG_2026-04-21_2.md  DEVLOG_2026-04-21_3.md  DEVLOG_2026-04-21_4.md  DEVLOG_2026-04-21_5.md  DEVLOG_2026-04-21_6.md  DEVLOG_2026-04-21_7.md  DEVLOG_2026-04-21_8.md  (+3 more)
eventlog/: __init__.py  reader.py  writer.py
mcp/: __init__.py
memkit/: README.md  __init__.py  async_memory.py  memory.py  protocols.py
roles/: hackathon.md
scenarios/: escape_room.py  scoring.py  x2_mock.py
scripts/: export_dataset.py  run_escape_room.py  run_matrix_mock.py  run_regression_mock.sh
sdk2cli/: README.md
sdk2cli/robots/unitree-g1-full/: README.md  manifest.txt  pyproject.toml  robot_cli.py
sdk2cli/robots/unitree-g1-full/examples/: stand.yaml
sdk2cli/robots/unitree-g1-full/systemd/: unitree-daemon.service
sdk2cli/robots/unitree-g1-full/tests/: test_safety.py
sdk2cli/robots/unitree-g1-full/unitree_cli/: __init__.py  __main__.py  cli.py  client.py  daemon.py  formatter.py  registry.py  repl.py  undo.py
snakes/: __init__.py  agent.py  cli.py  context.py  llm_client.py  loop.py  memory_bridge.py  robot_md.py  skill_registry.py  tools.py  types.py
tests/: conftest.py  test_eventlog.py  test_loop.py  test_runner_mock.py  test_scenario.py  test_score_aggregate.py  test_score_breakdown.py  test_semantics_outcome.py  test_skill_executor.py  test_skillpack_loader.py  test_toolchain_retry.py  test_tools.py
vla2cli/: README.md  __init__.py  cli.py
(+166 files in other folders)
