[project]
name = "snakes"
version = "0.1.0"
description = "Agent Runtime for Robots — Claude Code for Robotics"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.30.0",
    "openai>=1.30.0",
]

[project.optional-dependencies]
memkit = ["memkit"]
ros2 = ["rclpy"]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
snakes = "snakes.cli:main"
vla2cli = "vla2cli.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["snakes*", "eventlog*", "apps*", "vla2cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "memkit/tests", "eventlog/bridge/tests", "apps/diagnosis/servers/manastone_diag/tests"]
# Exclude vendor test dirs (sdk2cli robots bring their own tests we don't run at top level)
norecursedirs = ["sdk2cli"]
